rendezVous swagger annotations
